--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a class="nav-float-left nav-element"                           id="blgc-logo"           href="./"><img src="./img/logo.png" alt="BLGC Logo"></a></li>
                 <li><a class="nav-float-left nav-element"                           id="blgc-text"           href="./">Bournemouth<br>Lifeguard Corps</a></li>
 
-                <li><a class="nav-float-right nav-element"                          id="cta-donate"          href="https://www.paypal.com/fundraiser/hub">Donate</a></li>
+                <li><a class="nav-float-right nav-element"                          id="cta-donate"          href="https://www.paypal.com/fundraiser/hub" target="_blank">Donate</a></li>
 
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="hamburger-menu">                     <i class="fa-solid fa-bars"></i></a></li>
                 <li><a class="nav-float-right nav-element nav-hoverable nav-hidden" id="members-page-icon"   href="./members">    <i class="fa-solid fa-user"></i></a></li>
@@ -143,7 +143,7 @@
             <div id="pool-training" class="what-we-do-tile">
                 <h3 class="what-we-do-tile-head">Pool Training</h3>
                 <img src="./img/pool-training.jpeg">
-                <p class="what-we-do-tile-desc">As a club we train in a local swimming pool from September to July every year only stopping over Christmas and Easter. We train on Friday's with sessions starting at 19:30pm and finishing at 22:00pm. We cater for ages 8 years old and up. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet unde tenetur quidem rem veniam.</p>
+                <p class="what-we-do-tile-desc">As a club we train in a local swimming pool from September to July every year only stopping over Christmas and Easter. We train on Friday's with sessions starting at 19:30pm and finishing at 22:00pm. We cater for ages 8 years old and up. With dedicated instructors and expert kit, these sessions are a great chance to improve your lifesaving and competition skills</p>
                 <a class="learn-more" href="./what-we-do/pool-training">Learn More</a>
             </div>
 
@@ -152,7 +152,7 @@
             <div id="irb-training" class="what-we-do-tile">
                 <h3 class="what-we-do-tile-head">IRB Training</h3>
                 <img src="./img/irb-training.jpg">
-                <p class="what-we-do-tile-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores facilis, ipsam ad velit doloribus veniam labore est corporis, aliquid quae illo, odit excepturi ea explicabo. Obcaecati earum quidem expedita ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ullam minima. Praesentium quos dicta, tenetur maxime Lorem.</p>
+                <p class="what-we-do-tile-desc">Throughout the summer, on a Wednesday night, we train using our amazing inshore rescue boats. These sessions help the more experienced lifeguards at the club improve their IRB skills and knowledge to allow us to provide world-class water saftey cover at local events, such as the BHF pier to pier swim, and compete at an inernational level.</p>
                 <a class="learn-more" href="./what-we-do/irb-training">Learn More</a>
             </div>
 
@@ -163,7 +163,7 @@
             </div>
             <div id="about-us-col-2">
                 <h1>About Us</h1>
-                <p>Bournemouth Lifeguard Corps was founded in 1965, moved to Durley Chine in 1967, became a registered charity in 2016 and moved from Durley Chine to Jospeh Steps in 2020. We are affiliated with the Royal Lifesaving Society (RLSS) who are the UK’s leading provider of water safety and drowning prevention education and Surf Lifesaving Great Britain (SLSGB) whose aim is to help make our beaches safer and more enjoyable places for everyone. We also work closely with the Royal National Lifeboat Institute (RNLI), working professionally alongside them during major events such as the Bournemouth Air Festival and British Heart Foundation Pier to Pier Swim, for which we provide water safety cover.</p>
+                <p>Bournemouth Lifeguard Corps was founded in 1965, moved to Durley Chine in 1967, became a registered charity in 2016 and moved from Durley Chine to Jospeh Steps in 2020. We are affiliated with the Royal Lifesaving Society (RLSS) who are the UK's leading provider of water safety and drowning prevention education and Surf Lifesaving Great Britain (SLSGB) whose aim is to help make our beaches safer and more enjoyable places for everyone. We also work closely with the Royal National Lifeboat Institute (RNLI), working professionally alongside them during major events such as the Bournemouth Air Festival and British Heart Foundation Pier to Pier Swim, for which we provide water safety cover.</p>
                 <a class="learn-more" href="./about-us">Learn More</a>
             </div>
         </div>
@@ -173,14 +173,14 @@
                 <h1>Development Begins</h1>
                 <p>News</p>
                 <img src="./img/development-begins.jpg">
-                <p>Development has finally begun on our club's new facility at Josephs steps. After moving to the facility in 2020...</p>
+                <p>Development has finally begun on our club's new facility at Josephs steps! After moving to the facility in 2020 work has begun to develop a modern, sustainable design featuring dedicated training and operational rooms, equipment storage and changing facilities.</p>
                 <a class="learn-more" href="./news/article?id=001">Read More</a>
             </div>
             <div id="event" class="nae-col">
                 <h1>Speeds '24</h1>
                 <p>Event | 12-13th March 2024</p>
                 <img src="./img/speeds-24.jfif">
-                <p>Speeds '24 will be helf at the Sandwell Aquatics Cente in Birmingham. For more....</p>
+                <p>Speeds is the largest competition of its kind in the UK and the events team at RLSS UK are delighted to have secured Sandwell Aquatic Centre for the 2024 competition, giving athletes the amazing opportunity to swim in the Birmingham Commonwealth Games Pool!</p>
                 <a class="learn-more" href="./event/article?id=001">Read More</a>
             </div>
         </div>
@@ -252,10 +252,10 @@
                 <p><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
             </div>
             <div class="footer-col-2">
-                <a href="https://www.instagram.com/blgc_official/"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
-                <a href="https://www.facebook.com/bournemouthlifeguards/"><i class="fa-brands fa-facebook fa-2xl"></i></a><br>
-                <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A"><i class="fa-brands fa-youtube fa-2xl"></i></a><br>
-                <a href="https://twitter.com/blgc_official"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+                <a href="https://www.instagram.com/blgc_official/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
+                <a href="https://www.facebook.com/bournemouthlifeguards/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a><br>
+                <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a><br>
+                <a href="https://twitter.com/blgc_official" target="_blank"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
             </div>
             <div class="footer-col-3">
                 <div>
