--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             <option value="dr">Dr</option>
                         </select>
                         <input class="row-2-element input" type="text" id="first-name" required>
-                        <input class="row-2-elemen input" type="text" id="last-name" required>
+                        <input class="row-2-element input" type="text" id="last-name" required>
                     </div>
                     <div class="row-3">
                         <p class="row-3-element">Email Address</p>
@@ -249,7 +249,7 @@
                     <div class="footer-head"><p id="logo-text-footer">Bournemouth Lifeguard Corps</p></div>
                 </div>
                 <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
-                <p><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg">TheIceburg</a></p>
+                <p><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg" target="_blank">TheIceburg</a></p>
             </div>
             <div class="footer-col-2">
                 <a href="https://www.instagram.com/blgc_official/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
