--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div>
                     <div class="footer-head"><a href="./about-us/">About Us</a></div>
                     <ul>
-                        <li><a href="./about-us/our-past">Our Past</a></li>
+                        <li><a href="./about-us/our-history">Our History</a></li>
                         <li><a href="./about-us/our-future">Our Future</a></li>
                     </ul>
                 </div>
