--- a/about-us/our-history.html
+++ b/about-us/our-history.html
@@ -23,8 +23,8 @@
     <body>
         <nav>
             <ul class="nav-element-list">
-                <li><a class="nav-float-left nav-element"                           id="blgc-logo"           href="./"><img src="../img/logo.png" alt="BLGC Logo"></a></li>
-                <li><a class="nav-float-left nav-element"                           id="blgc-text"           href="./">Bournemouth<br>Lifeguard Corps</a></li>
+                <li><a class="nav-float-left nav-element"                           id="blgc-logo"           href="../"><img src="../img/logo.png" alt="BLGC Logo"></a></li>
+                <li><a class="nav-float-left nav-element"                           id="blgc-text"           href="../">Bournemouth<br>Lifeguard Corps</a></li>
 
                 <li><a class="nav-float-right nav-element"                          id="cta-donate"          href="https://www.paypal.com/fundraiser/hub" target="_blank">Donate</a></li>
 
