--- a/about-us/our-history.html
+++ b/about-us/our-history.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Tab Styling -->
     <title>Bournemouth Lifeguard Corps</title>
-    <link rel="icon" href="./img/logo.png">
+    <link rel="icon" href="../img/logo.png">
 
     <!-- Responsive Design Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
