--- a/about-us/our-history.html
+++ b/about-us/our-history.html
@@ -22,6 +22,9 @@
 </head>
     <body>
         <nav>
+            <div class="notification-bar">
+                <p>This is an experimental version of the BLGC website, for the current website click <a href="https://bournemouthlifeguards.co.uk">here</a>. Otherwise feel free to have a look around and let us know what you think <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0HjUUyInBTnV-NOqs08G-fIlFTLJV0u1h2qmJCpeUZwxCnQ/viewform?usp=sf_link" target="_blank">here</a></p>
+            </div>
             <ul class="nav-element-list">
                 <li><a class="nav-float-left nav-element"                           id="blgc-logo"           href="../"><img src="../img/logo.png" alt="BLGC Logo"></a></li>
                 <li><a class="nav-float-left nav-element"                           id="blgc-text"           href="../">Bournemouth<br>Lifeguard Corps</a></li>
