--- a/about-us/our-history.html
+++ b/about-us/our-history.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
         <div class="page-heading">
-            <img id="logo-footer" src="../img/our-history.jpeg" alt="Club HQ from the 70's">
+            <img id="page-head-image" src="../img/our-history.jpeg" alt="Club HQ from the 70's">
             <h1>Our History</h1>
         </div>
         <div class="page-content">
@@ -54,8 +54,8 @@
             <div class="image-container">
                 <img id="club-hut-old" src="../img/our-history.jpeg" alt="Club HQ from the 70's">
                 <img id="club-hut-new" src="../img/our-future.jpg" alt="BLGC of the Future">
-                <h1>Our Timeline</h1>
             </div>
+            <h1 id="timeline-header">Our Timeline</h1>
             <button type="button" class="collapsible" id="deafult">1960s<i class="fa-solid fa-caret-down"></i></button>
             <div class="content">
                 <p>Bournemouth Lifeguard Corps (BLGC) was founded in 1965. There had been several meetings with Bournemouth Borough Council to obtain permission to patrol the beach with several Councillors objecting on the grounds that the patrols would give the impression that the beach was unsafe. However, the argument was won by the more forward-thinking members and the fact that the RNLI was proposing to withdraw the inshore lifeboat (ILB) based at the pier.</p>
