--- a/what-we-do/pool-training.html
+++ b/what-we-do/pool-training.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
         <div class="pool-page-heading">
-            <img src="../img/pool.jpg" alt="Our Training Pool - Stokewood">
+            <img id="page-head-image" src="../img/pool.jpg" alt="Our Training Pool - Stokewood">
             <h1>Pool Training</h1>
         </div>
         <div class="pool-page-content">
