--- a/index-refactored.html
+++ b/index-refactored.html
@@ -210,7 +210,7 @@ ______                              _  ______         _____ _            _____  
         <!--------------------->
 
         <!-- home | styling exclusivly for the homepage -->
-        <!-- image-carousel | this is the home page image carousel -->
+        <!-- what-we-do | this is the what we do section -->
         <!-- container | this is the container for the element not the element itself -->
 
         <!-- heading | the heading of the section -->
@@ -220,94 +220,110 @@ ______                              _  ______         _____ _            _____  
         <!-- button | interactive button -->
 
         <h1 id="home-what-we-do-heading">What we do</h1>
-
         <div class="home-what-we-do-tile-container">
-
             <div id="home-what-we-do-beach-training-tile" class="home-what-we-do-tile">
                 <h3 class="home-what-we-do-tile-heading">Beach Training</h3>
                 <img class="home-what-we-do-tile-image" src="./img/beach-training.jpeg">
                 <p class="home-what-we-do-tile-desc">We train regularly throughout the summer months with all our members having access to multiple sessions a week in which we teach a variety of skills. This is all based at our beach based Club HQ @ Joseph Steps, Bournemouth. We also run winter training for our very keen adult members who each Sunday brave the cold water to keep fit.</p>
                 <a class="home-what-we-do-learn-more-button" href="./what-we-do/beach-training">Learn More</a>
             </div>
-
             <div id="home-what-we-do-pool-training-tile" class="home-what-we-do-tile">
                 <h3 class="home-what-we-do-tile-heading">Pool Training</h3>
                 <img class="home-what-we-do-tile-image" src="./img/pool-training.jpeg">
                 <p class="home-what-we-do-tile-desc">As a club we train in a local swimming pool from September to July every year only stopping over Christmas and Easter. We train on Friday's with sessions starting at 19:30pm and finishing at 22:00pm. We cater for ages 8 years old and up. With dedicated instructors and expert kit, these sessions are a great chance to improve your lifesaving and competition skills</p>
                 <a class="home-what-we-do-learn-more-button" href="./what-we-do/pool-training">Learn More</a>
             </div>
-
             <div id="home-what-we-do-irb-training-tile" class="home-what-we-do-tile">
                 <h3 class="home-what-we-do-tile-heading">IRB Training</h3>
                 <img class="home-what-we-do-tile-image" src="./img/irb-training.jpg">
                 <p class="home-what-we-do-tile-desc">Throughout the summer, on a Wednesday night, we train using our amazing inshore rescue boats. These sessions help the more experienced lifeguards at the club improve their IRB skills and knowledge to allow us to provide world-class water saftey cover at local events, such as the BHF pier to pier swim, and compete at an inernational level.</p>
                 <a class="home-what-we-do-learn-more-button" href="./what-we-do/irb-training">Learn More</a>
             </div>
-
         </div>
 
-        <!---------------->
-        <!-- WHAT WE DO -->
-        <!---------------->
+        <!-------------->
+        <!-- ABOUT US -->
+        <!-------------->
 
         <!-- Class Breakdown -->
         <!--------------------->
 
-        <div class="about-us">
-            <div id="about-us-col-1">
-                <img src="./img/carousel-1.jpg">
+        <!-- home | styling exclusivly for the homepage -->
+        <!-- about-us | this is the about-us section -->
+        <!-- container | this is the container for the element not the element itself -->
+        <!-- col | the column of the section -->
+
+        <!-- heading | the heading of the section -->
+        <!-- desc | the description -->
+        <!-- img | image -->
+        <!-- button | interactive button -->
+
+        <div id="home-about-us-container">
+            <div id="home-about-us-col-1">
+                <img id="home-about-us-img" src="./img/carousel-1.jpg">
             </div>
-            <div id="about-us-col-2">
-                <h1>About Us</h1>
-                <p>Bournemouth Lifeguard Corps was founded in 1965, moved to Durley Chine in 1967, became a registered charity in 2016 and moved from Durley Chine to Jospeh Steps in 2020. We are affiliated with the Royal Lifesaving Society (RLSS) who are the UK's leading provider of water safety and drowning prevention education and Surf Lifesaving Great Britain (SLSGB) whose aim is to help make our beaches safer and more enjoyable places for everyone. We also work closely with the Royal National Lifeboat Institute (RNLI), working professionally alongside them during major events such as the Bournemouth Air Festival and British Heart Foundation Pier to Pier Swim, for which we provide water safety cover.</p>
-                <a class="learn-more" href="./about-us">Learn More</a>
+            <div id="home-about-us-col-2">
+                <h1 id="home-about-us-heading">About Us</h1>
+                <p id="home-about-us-desc">Bournemouth Lifeguard Corps was founded in 1965, moved to Durley Chine in 1967, became a registered charity in 2016 and moved from Durley Chine to Jospeh Steps in 2020. We are affiliated with the Royal Lifesaving Society (RLSS) who are the UK's leading provider of water safety and drowning prevention education and Surf Lifesaving Great Britain (SLSGB) whose aim is to help make our beaches safer and more enjoyable places for everyone. We also work closely with the Royal National Lifeboat Institute (RNLI), working professionally alongside them during major events such as the Bournemouth Air Festival and British Heart Foundation Pier to Pier Swim, for which we provide water safety cover.</p>
+                <a id="home-about-us-learn-more-button" href="./about-us">Learn More</a>
             </div>
         </div>
 
-        <!---------------->
-        <!-- WHAT WE DO -->
-        <!---------------->
+        <!------------------->
+        <!-- NEWS + EVENTS -->
+        <!------------------->
 
         <!-- Class Breakdown -->
         <!--------------------->
 
-        <h1 id="nae-text">News & Events</h1>
-        <div class="news-events">
-            <div id="news" class="nae-col">
-                <h1>Development Begins</h1>
-                <p>News</p>
-                <img src="./img/development-begins.jpg">
-                <p>Development has finally begun on our club's new facility at Josephs steps! After moving to the facility in 2020 work has begun to develop a modern, sustainable design featuring dedicated training and operational rooms, equipment storage and changing facilities.</p>
-                <a class="learn-more" href="./news/article?id=001">Read More</a>
+        <!-- home | styling exclusivly for the homepage -->
+        <!-- nae | news and events -->
+        <!-- container | this is the container for the element not the element itself -->
+        <!-- col | the column of the section -->
+
+        <!-- heading | the heading of the section -->
+        <!-- desc | the description -->
+        <!-- button | interactive button -->
+        <!-- img | image -->
+        <!-- tags | article tags -->
+
+        <h1 id="home-nae-heading">News & Events</h1>
+        <div id="home-nae-container">
+            <div id="home-news-container" class="home-nae-col">
+                <h1 class="home-nae-col-heading">Development Begins</h1>
+                <p class="home-nae-col-tags">News</p>
+                <img class="home-nae-col-img" src="./img/development-begins.jpg">
+                <p class="home-nae-col-desc">Development has finally begun on our club's new facility at Josephs steps! After moving to the facility in 2020 work has begun to develop a modern, sustainable design featuring dedicated training and operational rooms, equipment storage and changing facilities.</p>
+                <a class="home-nae-col-read-more-button" href="./news/article?id=001">Read More</a>
             </div>
-            <div id="event" class="nae-col">
-                <h1>Speeds '24</h1>
-                <p>Event | 12-13th March 2024</p>
-                <img src="./img/speeds-24.jfif">
-                <p>Speeds is the largest competition of its kind in the UK and the events team at RLSS UK are delighted to have secured Sandwell Aquatic Centre for the 2024 competition, giving athletes the amazing opportunity to swim in the Birmingham Commonwealth Games Pool!</p>
-                <a class="learn-more" href="./event/article?id=001">Read More</a>
+            <div id="home-event-container" class="home-nae-col">
+                <h1 class="home-nae-col-heading">Speeds '24</h1>
+                <p class="home-nae-col-tags">Event | 12-13th March 2024</p>
+                <img class="home-nae-col-img" src="./img/speeds-24.jfif">
+                <p class="home-nae-col-desc">Speeds is the largest competition of its kind in the UK and the events team at RLSS UK are delighted to have secured Sandwell Aquatic Centre for the 2024 competition, giving athletes the amazing opportunity to swim in the Birmingham Commonwealth Games Pool!</p>
+                <a class="home-nae-col-read-more-button" href="./event/article?id=001">Read More</a>
             </div>
         </div>
 
-        <!---------------->
-        <!-- WHAT WE DO -->
-        <!---------------->
+        <!------------------>
+        <!-- CONTACT FORM -->
+        <!------------------>
 
         <!-- Class Breakdown -->
         <!--------------------->
 
-        <div class="contact-form">
-            <div class="contact-us-col" id="contact-us-col-1">
-                <h1 id="contact-us-text">Contact Us</h1>
+        <div id="home-contact-form-container">
+            <div class="home-contact-us-col" id="home-contact-us-col-1">
+                <h1 id="home-contact-us-heading">Contact Us</h1>
                 <p>Please fill out the form below and your query will be passed to the relevant committee member</p>
                 <form action="contact-us-submit" method="post">
-                    <div class="row-1">
-                        <p class="row-1-element">Title</p>
-                        <p class="row-1-element">First Name</p>
-                        <p class="row-1-element">Last Name</p>
+                    <div id="home-contact-us-row-1">
+                        <p class="home-contact-us-row-1-element">Title</p>
+                        <p class="home-contact-us-row-1-element">First Name</p>
+                        <p class="home-contact-us-row-1-element">Last Name</p>
                     </div>
-                    <div class="row-2">
-                        <select class="row-2-element input" id="prefix">
+                    <div id="home-contact-us-row-2">
+                        <select class="home-contact-us-row-2-element home-contact-us-input" id="prefix">
                             <option value="none">None</option>
                             <option value="mr">Mr</option>
                             <option value="mrs">Mrs</option>
@@ -315,16 +331,16 @@ ______                              _  ______         _____ _            _____  
                             <option value="miss">Miss</option>
                             <option value="dr">Dr</option>
                         </select>
-                        <input class="row-2-element input" type="text" id="first-name" required>
-                        <input class="row-2-element input" type="text" id="last-name" required>
+                        <input class="home-contact-us-row-2-element home-contact-us-input" type="text" id="first-name" required>
+                        <input class="home-contact-us-row-2-element home-contact-us-input" type="text" id="last-name" required>
                     </div>
-                    <div class="row-3">
-                        <p class="row-3-element">Email Address</p>
-                        <p class="row-3-element">Subject</p>
+                    <div id="home-contact-us-row-3">
+                        <p class="home-contact-us-row-3-element">Email Address</p>
+                        <p class="home-contact-us-row-3-element">Subject</p>
                     </div>
-                    <div class="row-4">
-                        <input class="row-4-element input" type="email" id="email-address" required>
-                        <select class="row-4-element input" id="subject">
+                    <div id="home-contact-us-row-4">
+                        <input class="home-contact-us-row-4-element home-contact-us-input" type="email" id="email-address" required>
+                        <select class="home-contact-us-row-4-element home-contact-us-input" id="subject">
                             <option value="general" selected>General</option>
                             <option value="adults">Adults & Masters (18+)</option>
                             <option value="cadets">Cadets (13-18)</option>
@@ -339,19 +355,19 @@ ______                              _  ______         _____ _            _____  
                             <option value="safeguarding">Safeguarding</option>
                         </select>
                     </div>
-                    <div class="row-5">
-                        <p class="row-5-element">Message</p>
+                    <div id="home-contact-us-row-5">
+                        <p class="home-contact-us-row-5-element">Message</p>
                     </div>
-                    <div class="row-6">
-                        <textarea class="row-6-element input" type="text" id="message" required></textarea>
+                    <div id="home-contact-us-row-6">
+                        <textarea class="home-contact-us-row-6-element home-contact-us-input" type="text" id="message" required></textarea>
                     </div>
-                    <div class="row-7">
-                        <input class="row-7-element" type="submit" id="submit" value="Submit">
+                    <div id="home-contact-us-row-7">
+                        <input class="home-contact-us-row-7-element" type="submit" id="submit" value="Submit">
                     </div>
                 </form>
             </div>
-            <div class="contact-us-col" id="contact-us-col-2">
-                <img src="./img/carousel-6.jpg">
+            <div class="home-contact-us-col" id="home-contact-us-col-2">
+                <img id="home-contact-us-img" src="./img/carousel-6.jpg">
             </div>
         </div>
 
