--- a/index.html
+++ b/index.html
@@ -312,6 +312,16 @@ ______                              _  ______         _____ _            _____  
         <!-- Class Breakdown -->
         <!--------------------->
 
+        <!-- home | styling exclusivly for the homepage -->
+        <!-- contact-form | contact form -->
+        <!-- container | this is the container for the element not the element itself -->
+        <!-- col | the column of the section -->
+        <!-- row | the row of the section -->
+
+        <!-- element | an element of the form -->
+        <!-- input | an input field of the form -->
+        <!-- img | image -->
+
         <div id="home-contact-form-container">
             <div class="home-contact-us-col" id="home-contact-us-col-1">
                 <h1 id="home-contact-us-heading">Contact Us</h1>
@@ -371,63 +381,74 @@ ______                              _  ______         _____ _            _____  
             </div>
         </div>
 
-        <!---------------->
-        <!-- WHAT WE DO -->
-        <!---------------->
+        <!------------>
+        <!-- FOOTER -->
+        <!------------>
 
         <!-- Class Breakdown -->
         <!--------------------->
 
-        <div class="footer-container">
-            <div class="footer-col-1">
-                <div class="logo-and-text-container">
-                    <img id="logo-footer" src="./img/logo.png" alt="BLGC Logo">
-                    <div class="footer-head"><p id="logo-text-footer">Bournemouth Lifeguard Corps</p></div>
+        <!-- general | used using the same styling throughout the website -->
+        <!-- footer | this is the main footer at the bottom of the page -->
+        <!-- container | this is the container for the element not the element itself -->
+        <!-- col | the column of the section -->
+
+        <!-- link | an internal or external link -->
+        <!-- heading | the heading of a list of links -->
+        <!-- list | a list of links -->
+        <!-- logo | logo -->
+        <!-- text | text -->
+
+        <div id="general-footer-container">
+            <div id="general-footer-col-1">
+                <div id="general-footer-logo-and-text-container">
+                    <img id="general-footer-logo" src="./img/logo.png" alt="BLGC Logo">
+                    <div><p id="general-footer-text">Bournemouth Lifeguard Corps</p></div>
                 </div>
-                <p>Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
-                <p><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a href="https://github.com/The-Iceburg" target="_blank">TheIceburg</a></p>
+                <p class="general-footer-col-1-text">Bournemouth Lifeguard Corps is a charity registered in England and Wales. Registered Charity number: 1166158. Registered address: C/O BH Live Active Stokewood, Stoke Wood Rd, Bournemouth BH3 7ND</p>
+                <p class="general-footer-col-1-text"><i class="fa fa-copyright"></i> BLGC 2023 | Powered by <a class="general-footer-link" href="https://github.com/The-Iceburg" target="_blank">TheIceburg</a></p>
             </div>
-            <div class="footer-col-2">
-                <a href="https://www.instagram.com/blgc_official/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
-                <a href="https://www.facebook.com/bournemouthlifeguards/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a><br>
-                <a href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a><br>
-                <a href="https://twitter.com/blgc_official" target="_blank"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+            <div id="general-footer-col-2">
+                <a class="general-footer-link" href="https://www.instagram.com/blgc_official/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a><br>
+                <a class="general-footer-link" href="https://www.facebook.com/bournemouthlifeguards/" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a><br>
+                <a class="general-footer-link" href="https://www.youtube.com/channel/UCCxtDBfImbV32PS7xtLJz_A" target="_blank"><i class="fa-brands fa-youtube fa-2xl"></i></a><br>
+                <a class="general-footer-link" href="https://twitter.com/blgc_official" target="_blank"><i class="fa-brands fa-x-twitter fa-2xl"></i></a>
             </div>
-            <div class="footer-col-3">
+            <div id="general-footer-col-3">
                 <div>
-                    <div class="footer-head"><a href="./what-we-do/">What we do</a></div>
-                    <ul>
-                        <li><a href="./what-we-do/beach-training">Beach Training</a></li>
-                        <li><a href="./what-we-do/pool-training">Pool Training</a></li>
-                        <li><a href="./what-we-do/irb-training">IRB Training</a></li>
-                        <li><a href="./what-we-do/competitions">Competitions</a></li>
-                        <li><a href="./what-we-do/events">Events</a></li>
+                    <div class="general-footer-heading"><a class="general-footer-link" href="./what-we-do/">What we do</a></div>
+                    <ul class="general-footer-list">
+                        <li><a class="general-footer-link" href="./what-we-do/beach-training">Beach Training</a></li>
+                        <li><a class="general-footer-link" href="./what-we-do/pool-training">Pool Training</a></li>
+                        <li><a class="general-footer-link" href="./what-we-do/irb-training">IRB Training</a></li>
+                        <li><a class="general-footer-link" href="./what-we-do/competitions">Competitions</a></li>
+                        <li><a class="general-footer-link" href="./what-we-do/events">Events</a></li>
                     </ul>
                 </div>
                 <div>
-                    <div class="footer-head"><a href="./about-us/">About Us</a></div>
-                    <ul>
-                        <li><a href="./about-us/our-history">Our History</a></li>
-                        <li><a href="./about-us/our-future">Our Future</a></li>
+                    <div class="general-footer-heading"><a class="general-footer-link"  href="./about-us/">About Us</a></div>
+                    <ul class="general-footer-list">
+                        <li><a class="general-footer-link" href="./about-us/our-history">Our History</a></li>
+                        <li><a class="general-footer-link" href="./about-us/our-future">Our Future</a></li>
                     </ul>
                 </div>
                 <div>
-                    <div class="footer-head"><a>News + Events</a></div>
-                    <ul>
-                        <li><a href="./news/article?id=001">Development Begins</a></li>
-                        <li><a href="./event/article?id=001">Speeds '24</a></li>
+                    <div class="general-footer-heading"><a class="general-footer-link" >News + Events</a></div>
+                    <ul class="general-footer-list">
+                        <li><a class="general-footer-link" href="./news/article?id=001">Development Begins</a></li>
+                        <li><a class="general-footer-link" href="./event/article?id=001">Speeds '24</a></li>
                     </ul>
                 </div>
                 <div>
-                    <div class="footer-head"><a>Members Page</a></div>
-                    <ul>
-                        <li><a href="./members/membership-form">Membership Form</a></li>
-                        <li><a href="./members/annual-membership-payments">Annual Membership Payment</a></li>
-                        <li><a href="./members/out-team">Our Team</a></li>
-                        <li><a href="./members/members-shop">Members Shop</a></li>
-                        <li><a href="./members/risk-assessment">Risk Assessment</a></li>
-                        <li><a href="./members/par-q">PAR-Q</a></li>
-                        <li><a href="./members/covid-19-regulations">Covid-19 Regulations</a></li>
+                    <div class="general-footer-heading"><a class="general-footer-link"  href="./members/">Members Page</a></div>
+                    <ul class="general-footer-list">
+                        <li><a class="general-footer-link" href="./members/membership-form">Membership Form</a></li>
+                        <li><a class="general-footer-link" href="./members/annual-membership-payments">Annual Membership Payment</a></li>
+                        <li><a class="general-footer-link" href="./members/out-team">Our Team</a></li>
+                        <li><a class="general-footer-link" href="./members/members-shop">Members Shop</a></li>
+                        <li><a class="general-footer-link" href="./members/risk-assessment">Risk Assessment</a></li>
+                        <li><a class="general-footer-link" href="./members/par-q">PAR-Q</a></li>
+                        <li><a class="general-footer-link" href="./members/covid-19-regulations">Covid-19 Regulations</a></li>
                     </ul>
                 </div>
             </div>
